[metadata]
name = napari-svg
url = https://github.com/napari/napari-svg
download_url = https://github.com/napari/napari-svg
author = Nicholas Sofroniew
author_email = sofroniewn@gmail.com
license = BSD-3
license_files = LICENSE
description = A plugin for reading and writing svg files with napari
long_description = file: README.md
long_description_content_type = text/markdown
include_package_data = True
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License

[options]
zip_safe = False
packages = find:
python_requires = >=3.9
install_requires =
    imageio>=2.5.0
    numpy>=1.16.0
    vispy >= 0.6.4

[options.extras_require]
testing =
    pytest
    pytest-cov
    napari >= 0.4
    pyqt5

[options.entry_points]
napari.plugin =
    svg = napari_svg
napari.manifest =
    napari-svg = napari_svg:napari.yaml

[options.package_data]
napari_svg = 
    napari.yaml
